[package]
name = "sqldap"
version = "0.1.0"
authors = ["Frederik Delaere <frederik.delaere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.6.1"
simple_logger = "1.11.0"
rust-ini = "0.16.0"
anyhow = "1.0.34"
ldap3 = "0.9.2"
term-table = "1.3.0"
home = "0.5.3"
term_size = "0.3.2"
derive_more = "0.99.11"
